💄 prevent box overflow out of border

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,7 @@ button {
   outline: none;
   border: none;
 }
+
+* {
+  box-sizing: border-box;
+}
